--- a/index.html
+++ b/index.html
@@ -2,13 +2,8 @@
 <html>
     <head>
         <title>Introdução a JS</title>
-        <script>
-            console.log('Olá mundo, introdução a JS');
-            console.log(`Data hora: ${new Date()}`);
-
-            function mensagem (){
-                alert ('Chamamos um modal')
-            }
+        <script src="./js/segregacao.js">
+            
         </script>
     </head>
     <body>
