--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
         <script src="./js/segregacao.js"></script>
+        <script src="./js/operadores.js"></script>
     </head>
     <body>
         <div class="p-3 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3">
