--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
         <script src="./js/segregacao.js"></script>
         <script src="./js/operadores.js"></script>
+        <script src="./js/repeticoes.js"></script>
+
     </head>
     <body>
         <div class="p-3 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3">
