--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
         <script src="./js/segregacao.js"></script>
-        <script src="./js/operadores.js"></script>
-        <script src="./js/repeticoes.js"></script>
+        <script src="./js/classes.js"></script>
+        <!-- <script src="./js/operadores.js"></script> -->
+        <!-- <script src="./js/repeticoes.js"></script> -->
 
     </head>
     <body>
