--- a/index.html
+++ b/index.html
@@ -7,17 +7,22 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
-        <script src="./js/segregacao.js"></script>
-        <script src="./js/classes.js"></script>
+        <!-- <script src="./js/segregacao.js"></script> -->
+     
+        <!-- <script src="./js/classes.js"></script> -->
         <!-- <script src="./js/operadores.js"></script> -->
         <!-- <script src="./js/repeticoes.js"></script> -->
 
     </head>
     <body>
         <div class="p-3 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3">
-            <h2">Bem vindo a introdução a JS</h2>
+            <h2 id="titulo">Bem vindo a introdução a JS</h2>
           </div>
+        <div class="mt-2 p-3 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3">
+            <h3 id="paragrafo">Novo Elemento</h3>
+        </div>  
           
-        <button type="button" onclick="mensagem2()">Mostrar mensagem</button>
+        <button class="mt-2" type="button" onclick="alterarHtml()">Mostrar mensagem</button>
+        <script src="./js/dom.js"></script>
     </body>
 </html>
