--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="mt-2 p-3 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3">
             <h3 id="paragrafo">Novo Elemento</h3>
         </div>  
+        <input id="input" type="text" placeholder="digite um texto">
           
         <button class="mt-2" type="button" onclick="alterarHtml()">Mostrar mensagem</button>
         <script src="./js/dom.js"></script>
