--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <!-- <script src="./js/operadores.js"></script> -->
         <!-- <script src="./js/repeticoes.js"></script> -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        
     </head>
     <body>
         <div class="p-3 text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3">
@@ -24,7 +25,9 @@
         </div>  
         <input id="input" type="text" placeholder="digite um texto">
           
-        <button class="mt-2" type="button" onclick="alterarHtml()">Mostrar mensagem</button>
+        <button class="mt-2" type="button" onclick="obterGato()">Mostrar mensagem</button>
+        <div id="gatos"></div>
         <script src="./js/dom.js"></script>
+        <script src="js/api.js"></script>
     </body>
 </html>
